--- a/source/index.html
+++ b/source/index.html
@@ -5,8 +5,111 @@
     <title>HTML Academy: Кэт энерджи</title>
   </head>
   <body>
-
-    <p>Репозиторий создан для обучения на профессиональном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive/adaptive">HTML и CSS, уровень 2</a>».</p>
+    <header class="header">
+      <a class="header__logo">
+        <img class="header__logo-image" src="#logo_cat" alt="Здоровое питание для кошек «CAT ENERGY»">
+      </a>>
+      <h2 class="cat-energy__name cat-energy__name--header">CAT ENERGY</h2>
+      <nav class="header__menu main-menu">
+        <ul class="main-menu__list site-list">
+          <li class="site-list__item site-list__item--active">
+            <a href="#">ГЛАВНАЯ</a>
+          </li>
+          <li class="site-list__item">
+            <a href="catalog.html">КАТАЛОГ ПРОДУКЦИИ</a>
+          </li>
+          <li class="site-list__item">
+            <a href="form.html">ПОДБОР ПРОГРАММЫ</a>
+          </li>
+        </ul>
+      </nav>
+    </header>
+    <main>
+      <section class="introduce">
+        <h1 class="introduce__head">ФУНКЦИОНАЛЬНОЕ ПИТАНИЕ ДЛЯ КОТОВ</h1>
+        <p class="introduce__info">ЗАНЯЛСЯ СОБОЙ?ЗАЙМИСЬ КОТОМ!</p>
+        <img class="inroduce__img" src="#img" alt="Банка с кормом">
+        <div class="button">
+          <a href="catalog.html">ПОДОБРАТЬ ПРОГРАММУ</a>
+        </div>
+      </section>
+      <ul class="program-choice">
+        <li class="program-choice__item">
+          <img class="program-choice__item__icon program-choice__item__icon--pro" alt="Похудение" src="#img">
+          <h2 class="program-choice__item__head">ПОХУДЕНИЕ</h2>
+          <p class="program-choice__info main-info">
+              Ваш кот весит больше собаки и почти утратил способность лазить по деревьям?
+              Пора на диету! Cat Energy Slim поможет вашему питомцу сбросить лишний вес.
+          </p>
+          <a href="#catalog" class="program-choice__get" >КАТАЛОГ SLIM</a>
+        </li>
+        <li class="program-choice__item">
+          <img class="program-choice__item__icon program-choice__item__icon--pro" alt="Набор массы" src="#img">
+          <h2 class="program-choice__item__head">НАБОР МАССЫ</h2>
+          <p class="program-choice__info main-info">
+              Заработать авторитет среди дворовых котов и даже собак?
+              Серия Cat Energy Pro поможет вашему коту нарастить необходимые мышцы!
+          </p>
+          <a href="#catalog" class="program-choice__get">КАТАЛОГ PRO</a>
+        </li>
+      </ul>
+      <section class="works">
+        <h2 class="works__head">Как это работает</h2>
+        <ul class="works__list">
+          <li class="works__item">
+            <img class="works__item__icon works__item__icon--benefit" alt="Листок" src="#img">
+            <p class="works__info">
+                Функциональное питание содержит только полезные питательные вещества.
+            </p>
+          </li>
+          <li class="works__item">
+            <img class="works__item__icon works__item__icon--easy" alt="Вода" src="#img">
+            <p class="works__info">
+                Выпускается в виде порошка, который нужно лишь залить кипятком и готово.
+            </p>
+          </li>
+          <li class="works__item">
+            <img class="works__item__icon works__item__icon--econom" alt="Нож и вилка" src="#img">
+            <p class="works__info">
+                Замените один-два приема обычной еды на наше функциональное питание.
+            </p>
+          </li>
+          <li class="works__item">
+            <img class="works__item__icon works__item__icon--time" alt="Часы" src="#img">
+            <p class="works__info">
+                Уже через месяц наслаждайтесь изменениями к лучшему вашего питомца!
+            </p>
+          </li>
+        </ul>
+      </section>
+      <!--Когда-нибудь здесь будет форма и карта-->
+    </main>
+    <footer class="footer">
+      <h2 class="cat-energy__name cat-energy__name--footer">CAT ENERGY</h2>
+      <ul class="footer__smm-list smm-list">
+          <li class="smm-list__item">
+            <a href="#">
+              <img src="#icon_vk" class="smm-list__item__icon smm-list__item__icon--vk" alt="Вконтакте">
+            </a>
+          </li>
+          <li class="smm-list__item">
+            <a href="#">
+              <img src="#icon_inst" class="smm-list__item__icon smm-list__item__icon--inst" alt="Insagram">
+            </a>
+          </li>
+          <li class="smm-list__item">
+            <a href="#">
+              <img src="#icon_fb" class="smm-list__item__icon smm-list__item__icon-fb" alt="Facebook">
+            </a>
+          </li>
+      </ul>
+      <p class="footer__html-academy html-academy">
+          HTML Academy
+          <a href="https://htmlacademy.ru">
+            <img class="html-academy__logo" alt="HTML Academy" src="#img">
+          </a>
+      </p>
+    </footer>
 
   </body>
 </html>
