меняем классы у пунктов каталога

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -29,7 +29,7 @@
         <ul class="catalog">
           <!--№1-->
           <li class="catalog__item">
-            <img class="catalog__item_img catalog__item_img--chiken catalog__item_img--chiken--500" alt="Cat Energy
+            <img class="catalog__item_img catalog__item_img--chiken catalog__item_img--500" alt="Cat Energy
             PRO 500 г вкус курицы" src="#">
             <h3 class="catalog__head">
               Cat Energy
@@ -55,7 +55,7 @@
           </li>
            <!--№2-->
            <li class="catalog__item">
-              <img class="catalog__item_img catalog__item_img--chiken catalog__item_img--chiken--500" alt="Cat Energy
+              <img class="catalog__item_img catalog__item_img--chiken catalog__item_img--1000" alt="Cat Energy
                PRO 1000 г вкус курицы" src="#">
               <h3 class="catalog__head">
                 Cat Energy
@@ -81,7 +81,7 @@
             </li>
             <!--№3-->
           <li class="catalog__item">
-              <img class="catalog__item_img catalog__item_img--chiken catalog__item_img--chiken--500" alt="Cat Energy
+              <img class="catalog__item_img catalog__item_img--fish catalog__item_img--500" alt="Cat Energy
               PRO 500 г вкус рыбы" src="#">
               <h3 class="catalog__head">
                 Cat Energy
@@ -107,7 +107,7 @@
             </li>
             <!--№4-->
           <li class="catalog__item">
-              <img class="catalog__item_img catalog__item_img--chiken catalog__item_img--chiken--500" alt="Cat Energy
+              <img class="catalog__item_img catalog__item_img--fish catalog__item_img--1000" alt="Cat Energy
               PRO 1000 г вкус рыбы" src="#">
               <h3 class="catalog__head">
                 Cat Energy
@@ -133,7 +133,7 @@
             </li>
              <!--№5-->
           <li class="catalog__item">
-              <img class="catalog__item_img catalog__item_img--chiken catalog__item_img--chiken--500" alt="Cat Energy
+              <img class="catalog__item_img catalog__item_img--buckwheat catalog__item_img--500" alt="Cat Energy
               Slim 500 г вкус гречки" src="#">
               <h3 class="catalog__head">
                 Cat Energy
@@ -159,7 +159,7 @@
             </li>
              <!--№6-->
           <li class="catalog__item">
-              <img class="catalog__item_img catalog__item_img--chiken catalog__item_img--chiken--500" alt="Cat Energy
+              <img class="catalog__item_img catalog__item_img--buckwheat catalog__item_img--1000" alt="Cat Energy
               Slim 1000 г вкус гречки" src="#">
               <h3 class="catalog__head">
                 Cat Energy
@@ -185,7 +185,7 @@
             </li>
              <!--№7-->
           <li class="catalog__item">
-              <img class="catalog__item_img catalog__item_img--chiken catalog__item_img--chiken--500" alt="Cat Energy
+              <img class="catalog__item_img catalog__item_img--rice catalog__item_img--500" alt="Cat Energy
               Slim 500 г вкус риса" src="#">
               <h3 class="catalog__head">
                 Cat Energy
