Делаем работу над ошибками

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -8,15 +8,15 @@
       <header class="header">
           <a class="header__logo">
             <img class="header__logo-image" src="#logo_cat" alt="Здоровое питание для кошек «CAT ENERGY»">
-          </a>>
-          <h1 class="header__head">CAT ENERGY</h1>
-          <nav class="header__menu main-menu">
-            <ul class="main-menu__list site-list">
+          </a>
+          <img class="header__image" src="#logo_cat1" alt="«CAT ENERGY»">
+          <nav class="header__menu">
+            <ul class="site-list">
               <li class="site-list__item">
                 <a href="index.html">ГЛАВНАЯ</a>
               </li>
               <li class="site-list__item site-list__item--active">
-                <a href="#">КАТАЛОГ ПРОДУКЦИИ</a>
+                <a>КАТАЛОГ ПРОДУКЦИИ</a>
               </li>
               <li class="site-list__item">
                 <a href="form.html">ПОДБОР ПРОГРАММЫ</a>
@@ -28,13 +28,17 @@
         <h1 class="catalog-head">КАТАЛОГ ПРОДУКЦИИ</h1>
         <ul class="catalog">
           <!--№1-->
-          <li class="catalog__item">
-            <img class="catalog__item_img catalog__item_img--chiken catalog__item_img--500" alt="Cat Energy
+           <li class="catalog__item">
+            <a href="#page1">
+              <img class="catalog__item_img" alt="Cat Energy
             PRO 500 г вкус курицы" src="#">
-            <h3 class="catalog__head">
+            </a>
+            <a href="#page1">
+              <h2 class="catalog__head">
               Cat Energy
               PRO 500 г
-            </h3>
+              </h2>
+            </a>
             <table class="catalog__description">
               <tr>
                 <td class="catalog__description__item">Объем</td>
@@ -49,18 +53,20 @@
                 <td class="catalog__description__item">700 р</td>
               </tr>
             </table>
-            <div class="button">
-              <a href="#">ЗАКАЗАТЬ</a>
-            </div>
-          </li>
-           <!--№2-->
-           <li class="catalog__item">
-              <img class="catalog__item_img catalog__item_img--chiken catalog__item_img--1000" alt="Cat Energy
-               PRO 1000 г вкус курицы" src="#">
-              <h3 class="catalog__head">
+            <a href="#" class="button">ЗАКАЗАТЬ</a>
+            </li>
+            <!--№2-->
+            <li class="catalog__item">
+              <a href="#page2">
+                <img class="catalog__item_img" alt="Cat Energy
+                PRO 1000 г вкус курицы" src="#">
+              </a>
+              <a href="#page2">
+                <h2 class="catalog__head">
                 Cat Energy
                 PRO 1000 г
-              </h3>
+                </h2>
+              </a>
               <table class="catalog__description">
                 <tr>
                   <td class="catalog__description__item">Объем</td>
@@ -75,44 +81,48 @@
                   <td class="catalog__description__item">1000 р</td>
                 </tr>
               </table>
-              <div class="button">
-                <a href="#">ЗАКАЗАТЬ</a>
-              </div>
-            </li>
-            <!--№3-->
-          <li class="catalog__item">
-              <img class="catalog__item_img catalog__item_img--fish catalog__item_img--500" alt="Cat Energy
-              PRO 500 г вкус рыбы" src="#">
-              <h3 class="catalog__head">
-                Cat Energy
-                PRO 500 г
-              </h3>
-              <table class="catalog__description">
-                <tr>
-                  <td class="catalog__description__item">Объем</td>
-                  <td class="catalog__description__item">500 г</td>
-                </tr>
-                <tr>
-                  <td class="catalog__description__item">Вкус</td>
-                  <td class="catalog__description__item">Рыба</td>
-                </tr>
-                <tr>
-                  <td class="catalog__description__item">Цена</td>
-                  <td class="catalog__description__item">700 р</td>
-                </tr>
-              </table>
-              <div class="button">
-                <a href="#">ЗАКАЗАТЬ</a>
-              </div>
+              <a href="#" class="button">ЗАКАЗАТЬ</a>
+              </li>
+              <!--№3-->
+              <li class="catalog__item">
+                <a href="#page3">
+                  <img class="catalog__item_img" alt="Cat Energy
+                  PRO 500 г вкус рыбы" src="#">
+                </a>
+                <a href="#page3">
+                  <h2 class="catalog__head">
+                  Cat Energy
+                  PRO 500 г
+                  </h2>
+                </a>
+                <table class="catalog__description">
+                  <tr>
+                    <td class="catalog__description__item">Объем</td>
+                    <td class="catalog__description__item">500 г</td>
+                  </tr>
+                  <tr>
+                    <td class="catalog__description__item">Вкус</td>
+                    <td class="catalog__description__item">Рыба</td>
+                  </tr>
+                  <tr>
+                    <td class="catalog__description__item">Цена</td>
+                    <td class="catalog__description__item">700 р</td>
+                  </tr>
+                </table>
+                <a href="#" class="button">ЗАКАЗАТЬ</a>
             </li>
             <!--№4-->
-          <li class="catalog__item">
-              <img class="catalog__item_img catalog__item_img--fish catalog__item_img--1000" alt="Cat Energy
+            <li class="catalog__item">
+              <a href="#page4">
+                <img class="catalog__item_img" alt="Cat Energy
               PRO 1000 г вкус рыбы" src="#">
-              <h3 class="catalog__head">
+              </a>
+              <a href="#page4">
+                <h2 class="catalog__head">
                 Cat Energy
                 PRO 1000 г
-              </h3>
+                </h2>
+              </a>
               <table class="catalog__description">
                 <tr>
                   <td class="catalog__description__item">Объем</td>
@@ -127,18 +137,20 @@
                   <td class="catalog__description__item">1000 р</td>
                 </tr>
               </table>
-              <div class="button">
-                <a href="#">ЗАКАЗАТЬ</a>
-              </div>
+              <a href="#" class="button">ЗАКАЗАТЬ</a>
             </li>
              <!--№5-->
-          <li class="catalog__item">
-              <img class="catalog__item_img catalog__item_img--buckwheat catalog__item_img--500" alt="Cat Energy
+            <li class="catalog__item">
+              <a href="#page5">
+                <img class="catalog__item_img" alt="Cat Energy
               Slim 500 г вкус гречки" src="#">
-              <h3 class="catalog__head">
+              </a>
+              <a href="#page5">
+                <h2 class="catalog__head">
                 Cat Energy
                 Slim 500 г
-              </h3>
+                </h2>
+              </a>
               <table class="catalog__description">
                 <tr>
                   <td class="catalog__description__item">Объем</td>
@@ -153,18 +165,20 @@
                   <td class="catalog__description__item">400 р</td>
                 </tr>
               </table>
-              <div class="button">
-                <a href="#">ЗАКАЗАТЬ</a>
-              </div>
+              <a href="#" class="button">ЗАКАЗАТЬ</a>
             </li>
              <!--№6-->
-          <li class="catalog__item">
-              <img class="catalog__item_img catalog__item_img--buckwheat catalog__item_img--1000" alt="Cat Energy
+            <li class="catalog__item">
+              <a href="#page6">
+                <img class="catalog__item_img" alt="Cat Energy
               Slim 1000 г вкус гречки" src="#">
-              <h3 class="catalog__head">
+              </a>
+              <a href="#page6" >
+                <h2 class="catalog__head">
                 Cat Energy
                 Slim 1000 г
-              </h3>
+                </h2>
+              </a>
               <table class="catalog__description">
                 <tr>
                   <td class="catalog__description__item">Объем</td>
@@ -179,18 +193,20 @@
                   <td class="catalog__description__item">700 р</td>
                 </tr>
               </table>
-              <div class="button">
-                <a href="#">ЗАКАЗАТЬ</a>
-              </div>
+              <a href="#" class="button">ЗАКАЗАТЬ</a>
             </li>
              <!--№7-->
-          <li class="catalog__item">
-              <img class="catalog__item_img catalog__item_img--rice catalog__item_img--500" alt="Cat Energy
-              Slim 500 г вкус риса" src="#">
-              <h3 class="catalog__head">
+            <li class="catalog__item">
+              <a href="#page7">
+                <img class="catalog__item_img" alt="Cat Energy
+                 Slim 500 г вкус риса" src="#">
+              </a>
+              <a href="#page7">
+                <h2 class="catalog__head">
                 Cat Energy
                 Slim 500 г
-              </h3>
+                </h2>
+              </a>
               <table class="catalog__description">
                 <tr>
                   <td class="catalog__description__item">Объем</td>
@@ -205,35 +221,34 @@
                   <td class="catalog__description__item">500 р</td>
                 </tr>
               </table>
-              <div class="button">
-                <a href="#">ЗАКАЗАТЬ</a>
-              </div>
+              <a href="#" class="button">ЗАКАЗАТЬ</a>
             </li>
         </ul>
         <section class="more-info">
-          <h3 class="catalog__head">Показать еще 100500 товаров</h3>
+          <h2 class="more-info__head">Показать еще 100500 товаров</h2>
           На самом деле вкусов гораздо больше!
-          <button class="button button--show">ПОКАЗАТЬ ВСЕ</button>
+          <a href="#all" class="button button--show">ПОКАЗАТЬ ВСЕ</a>
         </section>
 
-        <!--Когда-нибудь здесь будет форма и карта-->
+        <!--Когда-нибудь здесь будет форма-->
       </main>
       <footer class="footer">
-          <p class="cat-energy__name cat-energy__name--footer">CAT ENERGY</p>
+         <!--А тут будет карта-->
+          <img class="footer__image" src="#logo_cat1" alt="«CAT ENERGY»">
           <ul class="footer__smm-list smm-list">
               <li class="smm-list__item">
                 <a href="#">
-                   <img src="#icon_vk" class="smm-list__item__icon smm-list__item__icon--vk" alt="Вконтакте">
+                   <img src="#icon_vk" class="smm-list__icon" alt="Вконтакте">
                 </a>
               </li>
               <li class="smm-list__item">
                 <a href="#">
-                   <img src="#icon_inst" class="smm-list__item__icon smm-list__item__icon--inst" alt="Insagram">
+                   <img src="#icon_inst" class="smm-list__icon" alt="Insagram">
                 </a>
               </li>
               <li class="smm-list__item">
                 <a href="#">
-                  <img src="#icon_fb" class="smm-list__item__icon smm-list__item__icon-fb" alt="Facebook">
+                  <img src="#icon_fb" class="smm-list__icon" alt="Facebook">
                 </a>
               </li>
           </ul>
