--- a/source/form.html
+++ b/source/form.html
@@ -8,10 +8,11 @@
       <header class="header">
           <a class="header__logo">
             <img class="header__logo-image" src="#logo_cat" alt="Здоровое питание для кошек «CAT ENERGY»">
-          </a>>
-          <h1 class="header__head">CAT ENERGY</h1>
-          <nav class="header__menu main-menu">
-            <ul class="main-menu__list site-list">
+          </a>
+          <img class="header__image" src="#logo_cat1" alt="«CAT ENERGY»">
+          <h1 class="visualy-hidden">CAT ENERGY</h1>
+          <nav class="header__menu">
+            <ul class="site-list">
               <li class="site-list__item">
                 <a href="index.html">ГЛАВНАЯ</a>
               </li>
@@ -19,39 +20,40 @@
                 <a href="catalog.html">КАТАЛОГ ПРОДУКЦИИ</a>
               </li>
               <li class="site-list__item site-list__item--active">
-                <a href="#">ПОДБОР ПРОГРАММЫ</a>
+                <a>ПОДБОР ПРОГРАММЫ</a>
               </li>
             </ul>
           </nav>
       </header>
       <main>
-        <!--Когда-нибудь здесь будет форма и карта-->
+        <!--Когда-нибудь здесь будет форма-->
       </main>
       <footer class="footer">
-          <p class="cat-energy__name cat-energy__name--footer">CAT ENERGY</p>
-          <ul class="footer__smm-list smm-list">
-            <li class="smm-list__item">
-              <a href="#">
-                <img src="#icon_vk" class="smm-list__item__icon smm-list__item__icon--vk" alt="Вконтакте">
-              </a>
-            </li>
-            <li class="smm-list__item">
-              <a href="#">
-                <img src="#icon_inst" class="smm-list__item__icon smm-list__item__icon--inst" alt="Insagram">
-              </a>
-            </li>
-            <li class="smm-list__item">
-              <a href="#">
-                <img src="#icon_fb" class="smm-list__item__icon smm-list__item__icon-fb" alt="Facebook">
-              </a>
-              </li>
-          </ul>
-          <p class="footer__html-academy html-academy">
-              HTML Academy
-            <a href="https://htmlacademy.ru">
-                <img class="html-academy__logo" alt="HTML Academy" src="#">
+        <!--А тут будет карта-->
+        <img class="footer__image" src="#logo_cat1" alt="«CAT ENERGY»">
+        <ul class="footer__smm-list smm-list">
+          <li class="smm-list__item">
+            <a href="#">
+              <img src="#icon_vk" class="smm-list__icon" alt="Вконтакте">
             </a>
-          </p>
+          </li>
+          <li class="smm-list__item">
+            <a href="#">
+              <img src="#icon_inst" class="smm-list__icon" alt="Insagram">
+            </a>
+          </li>
+          <li class="smm-list__item">
+             <a href="#">
+               <img src="#icon_fb" class="smm-list__icon" alt="Facebook">
+            </a>
+            </li>
+        </ul>
+        <p class="footer__html-academy html-academy">
+              HTML Academy
+          <a href="https://htmlacademy.ru">
+              <img class="html-academy__logo" alt="HTML Academy" src="#">
+          </a>
+        </p>
       </footer>
   </body>
 </html>
