--- a/source/index.html
+++ b/source/index.html
@@ -8,12 +8,13 @@
     <header class="header">
       <a class="header__logo">
         <img class="header__logo-image" src="#logo_cat" alt="Здоровое питание для кошек «CAT ENERGY»">
-      </a>>
-      <h2 class="cat-energy__name cat-energy__name--header">CAT ENERGY</h2>
-      <nav class="header__menu main-menu">
-        <ul class="main-menu__list site-list">
+      </a>
+      <img class="header__image" src="#logo_cat1" alt="«CAT ENERGY»">
+      <h2 class="visualy-hidden">CAT ENERGY</h2>
+      <nav class="header__menu">
+        <ul class="site-list">
           <li class="site-list__item site-list__item--active">
-            <a href="#">ГЛАВНАЯ</a>
+            <a>ГЛАВНАЯ</a>
           </li>
           <li class="site-list__item">
             <a href="catalog.html">КАТАЛОГ ПРОДУКЦИИ</a>
@@ -28,78 +29,77 @@
       <section class="introduce">
         <h1 class="introduce__head">ФУНКЦИОНАЛЬНОЕ ПИТАНИЕ ДЛЯ КОТОВ</h1>
         <p class="introduce__info">ЗАНЯЛСЯ СОБОЙ?ЗАЙМИСЬ КОТОМ!</p>
-        <img class="inroduce__img" src="#img" alt="Банка с кормом">
-        <div class="button">
-          <a href="catalog.html">ПОДОБРАТЬ ПРОГРАММУ</a>
-        </div>
+        <img class="introduce__img" src="#img" alt="Банка с кормом">
+        <a href="form.html" class="button">ПОДОБРАТЬ ПРОГРАММУ</a>
       </section>
       <ul class="program-choice">
         <li class="program-choice__item">
-          <img class="program-choice__item__icon program-choice__item__icon--pro" alt="Похудение" src="#img">
+          <!--Картинка-иконка-->
           <h2 class="program-choice__item__head">ПОХУДЕНИЕ</h2>
-          <p class="program-choice__info main-info">
+          <p class="program-choice__info">
               Ваш кот весит больше собаки и почти утратил способность лазить по деревьям?
               Пора на диету! Cat Energy Slim поможет вашему питомцу сбросить лишний вес.
           </p>
-          <a href="#catalog" class="program-choice__get" >КАТАЛОГ SLIM</a>
+          <a href="#catalog-1" class="program-choice__get" >Каталог SLIM</a>
         </li>
         <li class="program-choice__item">
-          <img class="program-choice__item__icon program-choice__item__icon--pro" alt="Набор массы" src="#img">
+          <!--Картинка-иконка-->
           <h2 class="program-choice__item__head">НАБОР МАССЫ</h2>
-          <p class="program-choice__info main-info">
+          <p class="program-choice__info">
               Заработать авторитет среди дворовых котов и даже собак?
               Серия Cat Energy Pro поможет вашему коту нарастить необходимые мышцы!
           </p>
-          <a href="#catalog" class="program-choice__get">КАТАЛОГ PRO</a>
+          <a href="#catalog-2" class="program-choice__get">Каталог PRO</a>
         </li>
       </ul>
       <section class="works">
         <h2 class="works__head">Как это работает</h2>
         <ul class="works__list">
-          <li class="works__item">
-            <img class="works__item__icon works__item__icon--benefit" alt="Листок" src="#img">
+          <li class="works__item works__item--benefit">
+            <!--Картинка-иконка-->
             <p class="works__info">
                 Функциональное питание содержит только полезные питательные вещества.
             </p>
           </li>
-          <li class="works__item">
-            <img class="works__item__icon works__item__icon--easy" alt="Вода" src="#img">
+          <li class="works__item works__item--easy">
+            <!--Картинка-иконка-->
             <p class="works__info">
                 Выпускается в виде порошка, который нужно лишь залить кипятком и готово.
             </p>
           </li>
-          <li class="works__item">
-            <img class="works__item__icon works__item__icon--econom" alt="Нож и вилка" src="#img">
+          <li class="works__item works__item--econom">
+            <!--Картинка-иконка-->
             <p class="works__info">
                 Замените один-два приема обычной еды на наше функциональное питание.
             </p>
           </li>
-          <li class="works__item">
-            <img class="works__item__icon works__item__icon--time" alt="Часы" src="#img">
+          <li class="works__item works__item--better">
+            <!--Картинка-иконка-->
             <p class="works__info">
                 Уже через месяц наслаждайтесь изменениями к лучшему вашего питомца!
             </p>
           </li>
         </ul>
       </section>
-      <!--Когда-нибудь здесь будет форма и карта-->
+      <!--Когда-нибудь здесь будет форма-->
     </main>
     <footer class="footer">
-      <h2 class="cat-energy__name cat-energy__name--footer">CAT ENERGY</h2>
+       <!--А тут будет карта-->
+      <img class="footer__image" src="#logo_cat1" alt="«CAT ENERGY»">
       <ul class="footer__smm-list smm-list">
           <li class="smm-list__item">
             <a href="#">
-              <img src="#icon_vk" class="smm-list__item__icon smm-list__item__icon--vk" alt="Вконтакте">
+              <img src="#icon_vk" class="smm-list__icon" alt="Вконтакте">
             </a>
           </li>
           <li class="smm-list__item">
             <a href="#">
-              <img src="#icon_inst" class="smm-list__item__icon smm-list__item__icon--inst" alt="Insagram">
+              <img src="#icon_inst" class="smm-list__icon" alt="Insagram">
             </a>
           </li>
           <li class="smm-list__item">
             <a href="#">
-              <img src="#icon_fb" class="smm-list__item__icon smm-list__item__icon-fb" alt="Facebook">
+              <img src="#icon_fb" class="smm-list__icon" alt="Facebook">
             </a>
           </li>
       </ul>
