Работа над ошибками 2

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -10,6 +10,7 @@
             <img class="header__logo-image" src="#logo_cat" alt="Здоровое питание для кошек «CAT ENERGY»">
           </a>
           <img class="header__image" src="#logo_cat1" alt="«CAT ENERGY»">
+          <h2 class="visually-hidden">CAT ENERGY</h2>
           <nav class="header__menu">
             <ul class="site-list">
               <li class="site-list__item">
@@ -29,196 +30,196 @@
         <ul class="catalog">
           <!--№1-->
            <li class="catalog__item">
-            <a href="#page1">
-              <img class="catalog__item_img" alt="Cat Energy
+            <a href="/page1">
+              <img class="catalog__item-img" alt="Cat Energy
             PRO 500 г вкус курицы" src="#">
             </a>
-            <a href="#page1">
+            <a href="/page1">
               <h2 class="catalog__head">
               Cat Energy
               PRO 500 г
               </h2>
             </a>
-            <table class="catalog__description">
+            <table class="catalog-description">
               <tr>
-                <td class="catalog__description__item">Объем</td>
-                <td class="catalog__description__item">500 г</td>
+                <td class="catalog-description__item">Объем</td>
+                <td class="catalog-description__item">500 г</td>
               </tr>
               <tr>
-                <td class="catalog__description__item">Вкус</td>
-                <td class="catalog__description__item">Курица</td>
+                <td class="catalog-description__item">Вкус</td>
+                <td class="catalog-description__item">Курица</td>
               </tr>
               <tr>
-                <td class="catalog__description__item">Цена</td>
-                <td class="catalog__description__item">700 р</td>
+                <td class="catalog-description__item">Цена</td>
+                <td class="catalog-description__item">700 р</td>
               </tr>
             </table>
             <a href="#" class="button">ЗАКАЗАТЬ</a>
             </li>
             <!--№2-->
             <li class="catalog__item">
-              <a href="#page2">
-                <img class="catalog__item_img" alt="Cat Energy
+              <a href="/page2">
+                <img class="catalog__item-img" alt="Cat Energy
                 PRO 1000 г вкус курицы" src="#">
               </a>
-              <a href="#page2">
+              <a href="/page2">
                 <h2 class="catalog__head">
                 Cat Energy
                 PRO 1000 г
                 </h2>
               </a>
-              <table class="catalog__description">
+              <table class="catalog-description">
                 <tr>
-                  <td class="catalog__description__item">Объем</td>
-                  <td class="catalog__description__item">1000 г</td>
+                  <td class="catalog-description__item">Объем</td>
+                  <td class="catalog-description__item">1000 г</td>
                 </tr>
                 <tr>
-                  <td class="catalog__description__item">Вкус</td>
-                  <td class="catalog__description__item">Курица</td>
+                  <td class="catalog-description__item">Вкус</td>
+                  <td class="catalog-description__item">Курица</td>
                 </tr>
                 <tr>
-                  <td class="catalog__description__item">Цена</td>
-                  <td class="catalog__description__item">1000 р</td>
+                  <td class="catalog-description__item">Цена</td>
+                  <td class="catalog-description__item">1000 р</td>
                 </tr>
               </table>
               <a href="#" class="button">ЗАКАЗАТЬ</a>
               </li>
               <!--№3-->
               <li class="catalog__item">
-                <a href="#page3">
-                  <img class="catalog__item_img" alt="Cat Energy
+                <a href="/page3">
+                  <img class="catalog__item-img" alt="Cat Energy
                   PRO 500 г вкус рыбы" src="#">
                 </a>
-                <a href="#page3">
+                <a href="/page3">
                   <h2 class="catalog__head">
                   Cat Energy
                   PRO 500 г
                   </h2>
                 </a>
-                <table class="catalog__description">
+                <table class="catalog-description">
                   <tr>
-                    <td class="catalog__description__item">Объем</td>
-                    <td class="catalog__description__item">500 г</td>
+                    <td class="catalog-description__item">Объем</td>
+                    <td class="catalog-description__item">500 г</td>
                   </tr>
                   <tr>
-                    <td class="catalog__description__item">Вкус</td>
-                    <td class="catalog__description__item">Рыба</td>
+                    <td class="catalog-description__item">Вкус</td>
+                    <td class="catalog-description__item">Рыба</td>
                   </tr>
                   <tr>
-                    <td class="catalog__description__item">Цена</td>
-                    <td class="catalog__description__item">700 р</td>
+                    <td class="catalog-description__item">Цена</td>
+                    <td class="catalog-description__item">700 р</td>
                   </tr>
                 </table>
                 <a href="#" class="button">ЗАКАЗАТЬ</a>
             </li>
             <!--№4-->
             <li class="catalog__item">
-              <a href="#page4">
-                <img class="catalog__item_img" alt="Cat Energy
+              <a href="/page4">
+                <img class="catalog__item-img" alt="Cat Energy
               PRO 1000 г вкус рыбы" src="#">
               </a>
-              <a href="#page4">
+              <a href="/page4">
                 <h2 class="catalog__head">
                 Cat Energy
                 PRO 1000 г
                 </h2>
               </a>
-              <table class="catalog__description">
+              <table class="catalog-description">
                 <tr>
-                  <td class="catalog__description__item">Объем</td>
-                  <td class="catalog__description__item">1000 г</td>
+                  <td class="catalog-description__item">Объем</td>
+                  <td class="catalog-description__item">1000 г</td>
                 </tr>
                 <tr>
-                  <td class="catalog__description__item">Вкус</td>
-                  <td class="catalog__description__item">Курица</td>
+                  <td class="catalog-description__item">Вкус</td>
+                  <td class="catalog_-description__item">Курица</td>
                 </tr>
                 <tr>
-                  <td class="catalog__description__item">Цена</td>
-                  <td class="catalog__description__item">1000 р</td>
+                  <td class="catalog-description__item">Цена</td>
+                  <td class="catalog-description__item">1000 р</td>
                 </tr>
               </table>
               <a href="#" class="button">ЗАКАЗАТЬ</a>
             </li>
              <!--№5-->
             <li class="catalog__item">
-              <a href="#page5">
-                <img class="catalog__item_img" alt="Cat Energy
+              <a href="/page5">
+                <img class="catalog__item-img" alt="Cat Energy
               Slim 500 г вкус гречки" src="#">
               </a>
-              <a href="#page5">
+              <a href="/page5">
                 <h2 class="catalog__head">
                 Cat Energy
                 Slim 500 г
                 </h2>
               </a>
-              <table class="catalog__description">
+              <table class="catalog-description">
                 <tr>
-                  <td class="catalog__description__item">Объем</td>
-                  <td class="catalog__description__item">500 г</td>
+                  <td class="catalog-description__item">Объем</td>
+                  <td class="catalog-description__item">500 г</td>
                 </tr>
                 <tr>
-                  <td class="catalog__description__item">Вкус</td>
-                  <td class="catalog__description__item">Гречка</td>
+                  <td class="catalog-description__item">Вкус</td>
+                  <td class="catalog-description__item">Гречка</td>
                 </tr>
                 <tr>
-                  <td class="catalog__description__item">Цена</td>
-                  <td class="catalog__description__item">400 р</td>
+                  <td class="catalog-description__item">Цена</td>
+                  <td class="catalog-description__item">400 р</td>
                 </tr>
               </table>
               <a href="#" class="button">ЗАКАЗАТЬ</a>
             </li>
              <!--№6-->
             <li class="catalog__item">
-              <a href="#page6">
-                <img class="catalog__item_img" alt="Cat Energy
+              <a href="/page6">
+                <img class="catalog__item-img" alt="Cat Energy
               Slim 1000 г вкус гречки" src="#">
               </a>
-              <a href="#page6" >
+              <a href="/page6" >
                 <h2 class="catalog__head">
                 Cat Energy
                 Slim 1000 г
                 </h2>
               </a>
-              <table class="catalog__description">
+              <table class="catalog-description">
                 <tr>
-                  <td class="catalog__description__item">Объем</td>
-                  <td class="catalog__description__item">1000 г</td>
+                  <td class="catalog-description__item">Объем</td>
+                  <td class="catalog-description__item">1000 г</td>
                 </tr>
                 <tr>
-                  <td class="catalog__description__item">Вкус</td>
-                  <td class="catalog__description__item">Гречка</td>
+                  <td class="catalog-description__item">Вкус</td>
+                  <td class="catalog-description__item">Гречка</td>
                 </tr>
                 <tr>
-                  <td class="catalog__description__item">Цена</td>
-                  <td class="catalog__description__item">700 р</td>
+                  <td class="catalog-description__item">Цена</td>
+                  <td class="catalog-description__item">700 р</td>
                 </tr>
               </table>
               <a href="#" class="button">ЗАКАЗАТЬ</a>
             </li>
              <!--№7-->
             <li class="catalog__item">
-              <a href="#page7">
-                <img class="catalog__item_img" alt="Cat Energy
+              <a href="/page7">
+                <img class="catalog__item-img" alt="Cat Energy
                  Slim 500 г вкус риса" src="#">
               </a>
-              <a href="#page7">
+              <a href="/page7">
                 <h2 class="catalog__head">
                 Cat Energy
                 Slim 500 г
                 </h2>
               </a>
-              <table class="catalog__description">
+              <table class="catalog-description">
                 <tr>
-                  <td class="catalog__description__item">Объем</td>
-                  <td class="catalog__description__item">500 г</td>
+                  <td class="catalog-description__item">Объем</td>
+                  <td class="catalog-description__item">500 г</td>
                 </tr>
                 <tr>
-                  <td class="catalog__description__item">Вкус</td>
-                  <td class="catalog__description__item">Рис</td>
+                  <td class="catalog-description__item">Вкус</td>
+                  <td class="catalog-description__item">Рис</td>
                 </tr>
                 <tr>
-                  <td class="catalog__description__item">Цена</td>
-                  <td class="catalog__description__item">500 р</td>
+                  <td class="catalog-description__item">Цена</td>
+                  <td class="catalog-description__item">500 р</td>
                 </tr>
               </table>
               <a href="#" class="button">ЗАКАЗАТЬ</a>
@@ -227,7 +228,7 @@
         <section class="more-info">
           <h2 class="more-info__head">Показать еще 100500 товаров</h2>
           На самом деле вкусов гораздо больше!
-          <a href="#all" class="button button--show">ПОКАЗАТЬ ВСЕ</a>
+          <a href="/all" class="button button--show">ПОКАЗАТЬ ВСЕ</a>
         </section>
 
         <!--Когда-нибудь здесь будет форма-->
