--- a/source/index.html
+++ b/source/index.html
@@ -10,7 +10,7 @@
         <img class="header__logo-image" src="#logo_cat" alt="Здоровое питание для кошек «CAT ENERGY»">
       </a>
       <img class="header__image" src="#logo_cat1" alt="«CAT ENERGY»">
-      <h2 class="visualy-hidden">CAT ENERGY</h2>
+      <h2 class="visually-hidden">CAT ENERGY</h2>
       <nav class="header__menu">
         <ul class="site-list">
           <li class="site-list__item site-list__item--active">
@@ -35,7 +35,7 @@
       <ul class="program-choice">
         <li class="program-choice__item">
           <!--Картинка-иконка-->
-          <h2 class="program-choice__item__head">ПОХУДЕНИЕ</h2>
+          <h2 class="program-choice__item-head">ПОХУДЕНИЕ</h2>
           <p class="program-choice__info">
               Ваш кот весит больше собаки и почти утратил способность лазить по деревьям?
               Пора на диету! Cat Energy Slim поможет вашему питомцу сбросить лишний вес.
@@ -44,7 +44,7 @@
         </li>
         <li class="program-choice__item">
           <!--Картинка-иконка-->
-          <h2 class="program-choice__item__head">НАБОР МАССЫ</h2>
+          <h2 class="program-choice__item-head">НАБОР МАССЫ</h2>
           <p class="program-choice__info">
               Заработать авторитет среди дворовых котов и даже собак?
               Серия Cat Energy Pro поможет вашему коту нарастить необходимые мышцы!
