Продолжаем делать разметку учебного проекта

--- a/source/index.html
+++ b/source/index.html
@@ -81,9 +81,28 @@
           </li>
         </ul>
       </section>
-      <!--Когда-нибудь здесь будет форма-->
+      <section class="example">
+         <h2 class="example__title">Живой пример</h2>
+         <article class="example__text">
+            Борис сбросил 5 кг за 2 месяца, просто заменив свой обычный корм на Cat Energy Slim.
+            Отличный результат без изнуряющих тренировок!
+            При этом он не менял своих привычек и по-прежнему спит по 16 часов в день.
+         </article>
+         <p class="example__cost">затраты на питание:15 000 руб.</p>
+         <img class="example__img" src="#fatcat" alt="Жирный кот">
+         <form class="example-range">
+          <span class="example-range__was">БЫЛО</span>
+          <input class="example-range__look" type="range" min="-1" max="1">
+          <span class="example-range__is">СТАЛО</span>
+         </form>
+      </section>
+
     </main>
     <footer class="footer">
+        <section class="welcome">
+          <p class="welcome__partnership">Приглашаем к сотрудничеству диллеров!</p>
+          <p class="welcome__adress">ул.Большая Конюшенная, д. 19/8</p>
+        </section>
        <!--А тут будет карта-->
       <img class="footer__image" src="#logo_cat1" alt="«CAT ENERGY»">
       <ul class="footer__smm-list smm-list">
