--- a/source/catalog.html
+++ b/source/catalog.html
@@ -230,10 +230,62 @@
           На самом деле вкусов гораздо больше!
           <a href="/all" class="button button--show">ПОКАЗАТЬ ВСЕ</a>
         </section>
+        <section class="add-goods">
+          <h2 class="add-goods__title">Дополнительные товары</h2>
+          <ul class="add-goods__list">
+            <li class="add-article">
+              <h3 class="add-article__title">Сахарозаменитель</h3>
+              <table class="add-article__table">
+                <tr>
+                  <td class="add-article__item">1 упаковка (100 г)</td>
+                  <td class="add-article__item">200 р.</td>
+                </tr>
+              </table>
+              <a href="#" class="add-article__order">ЗАКАЗАТЬ</a>
+            </li>
 
+            <li class="add-article">
+              <h3 class="add-article__title">Питьевая вода</h3>
+              <table class="add-article__table">
+                <tr>
+                  <td class="add-article__item">5 литров</td>
+                  <td class="add-article__item">50 р.</td>
+                </tr>
+              </table>
+              <a href="#" class="add-article__order">ЗАКАЗАТЬ</a>
+            </li>
+
+            <li class="add-article">
+              <h3 class="add-article__title">Молоко</h3>
+              <table class="add-article__table">
+                <tr>
+                  <td class="add-article__item">1 литр</td>
+                  <td class="add-article__item">100 р.</td>
+                </tr>
+              </table>
+              <a href="#" class="add-article__order">ЗАКАЗАТЬ</a>
+            </li>
+
+            <li class="add-article">
+             <h3 class="add-article__title">Витамины</h3>
+              <table class="add-article__table">
+                 <tr>
+                  <td class="add-article__item">1 упаковка (30 г)</td>
+                  <td class="add-article__item">300 р.</td>
+                </tr>
+              </table>
+              <a href="#" class="add-article__order">ЗАКАЗАТЬ</a>
+            </li>
+          </ul>
+          <span class="add-goods__present">Закажите все и получите чехол для кота в подарок!</span>
+        </section>
         <!--Когда-нибудь здесь будет форма-->
       </main>
       <footer class="footer">
+          <section class="welcome">
+            <p class="welcome__partnership">Приглашаем к сотрудничеству диллеров!</p>
+            <p class="welcome__adress">ул.Большая Конюшенная, д. 19/8</p>
+          </section>
          <!--А тут будет карта-->
           <img class="footer__image" src="#logo_cat1" alt="«CAT ENERGY»">
           <ul class="footer__smm-list smm-list">
