Работа над ошибками. Добавляем текст в textarea

--- a/source/form.html
+++ b/source/form.html
@@ -64,7 +64,7 @@
         </fieldset>
         <fieldset class="cat-info">
           <label for="about" class="program-form__head">Комментарий</label>
-          <textarea id="about" name="about-cat" rows="5" placeholder="расскажите обо всех повадках кота" class="cat-info__text">
+          <textarea id="about" name="about-cat" rows="5" class="cat-info__text">расскажите обо всех повадках кота
           </textarea>
         </fieldset>
         <fieldset class="cat-addition">
