Меняем класс заголовку

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -26,7 +26,7 @@
           </nav>
       </header>
       <main class="main">
-        <h1 class="main-head">КАТАЛОГ ПРОДУКЦИИ</h1>
+        <h1 class="main__head">КАТАЛОГ ПРОДУКЦИИ</h1>
         <ul class="catalog">
           <!--№1-->
            <li class="catalog__item">
