--- a/source/form.html
+++ b/source/form.html
@@ -27,7 +27,7 @@
       </header>
       <main class="main">
         <section class="program">
-            <h1 class="main-head">Подбор программы</h1>
+            <h1 class="main__head">Подбор программы</h1>
             <p class="program__intro">
              Заполните анкету и мы подберем программу питания для вашего кота
             </p>
