Работа над ошибками

--- a/source/index.html
+++ b/source/index.html
@@ -3,8 +3,6 @@
   <head>
     <meta charset="utf-8">
     <title>HTML Academy: Кэт энерджи</title>
-    <link href="https://fonts.googleapis.com/css?family=Oswald:400,500&display=swap&subset=cyrillic"
-    rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
   </head>
   <body>
@@ -14,9 +12,6 @@
       </a>
       <h2 class="visually-hidden">CAT ENERGY</h2>
       <button type="button" class="burger">
-          <svg version="1.1" id="Layer_i" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="25px" height="19px" viewBox="0 0 18 18" style="enable-background:new 0 0 18 18;" xml:space="preserve">
-            <polygon points="18,1.3 16.7,0 9,7.7 1.3,0 0,1.3 7.7,9 0,16.7 1.3,18 9,10.3 16.7,18 18,16.7 10.3,9 "/>
-          </svg>
       </button>
       <nav class="header__menu">
         <ul class="site-list">
@@ -47,14 +42,7 @@
               Ваш кот весит больше собаки и почти утратил способность лазить по деревьям?
               Пора на диету! Cat Energy Slim поможет вашему питомцу сбросить лишний вес.
           </p>
-          <a href="#catalog-1" class="program-choice__get" >Каталог SLIM <svg version="1.1" id="Layer_5" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="25" height="12" viewBox="0 0 24.2 11" style="enable-background:new 0 0 24.2 11;" xml:space="preserve">
-            <style type="text/css">
-              .st0 {
-                fill: #3F4242;
-              }
-            </style>
-            <polygon class="st0" points="17.6,0 24.2,5.5 17.6,11 17.6,6.6 0,6.6 0,4.4 17.6,4.4 "/>
-          </svg></a>
+          <a href="#catalog-1" class="program-choice__get" >Каталог SLIM </a>
         </li>
         <li class="program-choice__item">
           <!--Картинка-иконка-->
@@ -63,14 +51,7 @@
               Заработать авторитет среди дворовых котов и даже собак?
               Серия Cat Energy Pro поможет вашему коту нарастить необходимые мышцы!
           </p>
-          <a href="#catalog-2" class="program-choice__get">Каталог PRO <svg version="1.1" id="Layer_4" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="25" height="12" viewBox="0 0 24.2 11" style="enable-background:new 0 0 24.2 11;" xml:space="preserve">
-            <style type="text/css">
-              .st0 {
-                fill: #3F4242;
-              }
-            </style>
-            <polygon class="st0" points="17.6,0 24.2,5.5 17.6,11 17.6,6.6 0,6.6 0,4.4 17.6,4.4 "/>
-          </svg></a>
+          <a href="#catalog-2" class="program-choice__get">Каталог PRO </a>
         </li>
       </ul>
       <section class="works">
@@ -121,9 +102,9 @@
         </table>
         <p class="example__cost">затраты на питание:15 000 руб.</p>
         <img class="example__img" src="img/before-mobile@1x.png" width="311" height="232" alt="Жирный кот">
-         <button type="button" class="example__was">БЫЛО</button>
+         <button type="button" class="example__cat example__cat--was">БЫЛО</button>
         <!--Тут будет индикатор-->
-         <button type="button" class="example__is">СТАЛО</button>
+         <button type="button" class="example__cat example__cat--is">СТАЛО</button>
      </section>
     </main>
     <footer class="footer">
