--- a/source/form.html
+++ b/source/form.html
@@ -3,31 +3,27 @@
   <head>
     <meta charset="utf-8">
     <title>HTML Academy: Кэт энерджи</title>
-    <link href="https://fonts.googleapis.com/css?family=Oswald:400,500&display=swap&subset=cyrillic"
-    rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
   </head>
   <body>
     <header class="header">
-      <a class="header__logo">
+      <a href="index.html" class="header__logo">
         <img class="header__logo-image" src="img/logo-mobile.svg" width="191" height="39" alt="Здоровое питание для кошек «CAT ENERGY»">
       </a>
       <h2 class="visually-hidden">CAT ENERGY</h2>
       <button type="button" class="burger">
-        <svg version="1.1" id="Layer" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="25px" height="19px" viewBox="0 0 18 18" style="enable-background:new 0 0 18 18;" xml:space="preserve">
-          <polygon points="18,1.3 16.7,0 9,7.7 1.3,0 0,1.3 7.7,9 0,16.7 1.3,18 9,10.3 16.7,18 18,16.7 10.3,9 "/>
-        </svg>
+
       </button>
       <nav class="header__menu">
         <ul class="site-list">
           <li class="site-list__item site-list__item--active">
-            <a class="site-list__link">ГЛАВНАЯ</a>
+            <a href="index.html" class="site-list__link">ГЛАВНАЯ</a>
           </li>
           <li class="site-list__item">
             <a href="catalog.html" class="site-list__link">КАТАЛОГ ПРОДУКЦИИ</a>
           </li>
           <li class="site-list__item">
-            <a href="form.html" class="site-list__link">ПОДБОР ПРОГРАММЫ</a>
+            <a class="site-list__link">ПОДБОР ПРОГРАММЫ</a>
           </li>
         </ul>
       </nav>
