Работа над ошибками-2

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -231,7 +231,7 @@
         <section class="more-info">
           <h2 class="more-info__head">Показать еще 100500 товаров</h2>
           <p class="more-info__part">На самом деле вкусов гораздо больше!</p>
-          <a href="/all" class="button-show">ПОКАЗАТЬ ВСЕ</a>
+          <a href="/all" class="more-info__show">ПОКАЗАТЬ ВСЕ</a>
         </section>
         <section class="add-goods">
           <h2 class="add-goods__title">Дополнительные товары</h2>
@@ -281,7 +281,7 @@
             </li>
           </ul>
           <div class="present">
-            <a class="present__a"></a>
+            <a class="present__a">ссылка</a>
             <p class="present__text">
               Закажите все и получите чехол для кота в подарок!
             </p>
