--- a/source/form.html
+++ b/source/form.html
@@ -88,7 +88,7 @@
       <footer class="footer">
         <section class="welcome">
             <p class="welcome__partnership">Приглашаем к сотрудничеству диллеров!</p>
-            <p class="welcome__adress">ул.Большая Конюшенная, д. 19/8 Санкт-Петербург</p>
+            <p class="welcome__address">ул.Большая Конюшенная, д. 19/8 Санкт-Петербург</p>
         </section>
        <img class="footer__map" src="img/bg-map-mobile@1x.png" width="320" height="400" alt="«CAT ENERGY»">
       <img class="footer__image" src="img/logo-footer.svg" width="128" height="24" alt="«CAT ENERGY»">
