--- a/source/catalog.html
+++ b/source/catalog.html
@@ -15,8 +15,8 @@
     </a>
     <h2 class="visually-hidden">CAT ENERGY</h2>
     <button type="button" class="burger">
-
     </button>
+    <h2 class="visually-hidden">меню</h2>
     <nav class="header__menu">
       <ul class="site-list">
         <li class="site-list__item site-list__item--active">
@@ -277,10 +277,11 @@
         </li>
       </ul>
       <div class="present">
-        <a class="present__a">ссылка</a>
-        <p class="present__text">
-          Закажите все и получите чехол для кота в подарок!
-        </p>
+        <a class="present__a">
+          <p class="present__text">
+            Закажите все и получите чехол для кота в подарок!
+          </p>
+        </a>
       </div>
     </section>
   </main>
