--- a/source/form.html
+++ b/source/form.html
@@ -15,8 +15,8 @@
     </a>
     <h2 class="visually-hidden">CAT ENERGY</h2>
     <button type="button" class="burger">
-
     </button>
+    <h2 class="visually-hidden">меню</h2>
     <nav class="header__menu">
       <ul class="site-list">
         <li class="site-list__item site-list__item--active">
