--- a/source/index.html
+++ b/source/index.html
@@ -16,6 +16,7 @@
     <h2 class="visually-hidden">CAT ENERGY</h2>
     <button type="button" class="burger">
     </button>
+    <h2 class="visually-hidden">меню</h2>
     <nav class="header__menu">
       <ul class="site-list">
         <li class="site-list__item site-list__item--active">
