--- a/source/form.html
+++ b/source/form.html
@@ -5,18 +5,20 @@
   <meta charset="utf-8">
   <title>HTML Academy: Кэт энерджи</title>
   <link href="css/style.css" rel="stylesheet">
+  <link rel="stylesheet" href="css/normalize.css">
 </head>
 
 <body>
   <header class="header">
-    <a href="index.html" class="header__logo">
-      <img class="header__logo-image" src="img/logo-mobile.svg" width="191" height="39"
-        alt="Здоровое питание для кошек «CAT ENERGY»">
-    </a>
-    <h2 class="visually-hidden">CAT ENERGY</h2>
-    <button type="button" class="burger">
-    </button>
-    <h2 class="visually-hidden">меню</h2>
+    <div class="header__wrapper">
+      <a class="header__logo">
+        <img class="header__logo-image" src="img/logo-mobile.svg" width="191" height="39"
+          alt="Здоровое питание для кошек «CAT ENERGY»">
+      </a>
+      <h2 class="visually-hidden">CAT ENERGY</h2>
+      <button type="button" class="burger">бургер</button>
+      <h2 class="visually-hidden">меню</h2>
+    </div>
     <nav class="header__menu">
       <ul class="site-list">
         <li class="site-list__item site-list__item--active">
@@ -96,27 +98,29 @@
       <p class="welcome__address">ул.Большая Конюшенная, д. 19/8 Санкт-Петербург</p>
     </section>
     <img class="footer__map" src="img/bg-map-mobile@1x.png" width="320" height="400" alt="«CAT ENERGY»">
-    <img class="footer__image" src="img/logo-footer.svg" width="128" height="24" alt="«CAT ENERGY»">
-    <ul class="footer__smm-list smm-list">
-      <li class="smm-list__item">
-        <a href="#">
+    <section class="footer__info">
+      <img class="footer__image" src="img/logo-footer.svg" width="128" height="24" alt="«CAT ENERGY»">
+      <ul class="footer__smm-list smm-list">
+        <li class="smm-list__item">
+          <a href="#">vk
+          </a>
+        </li>
+        <li class="smm-list__item">
+          <a href="#">inst
+          </a>
+        </li>
+        <li class="smm-list__item">
+          <a href="#">fb
+          </a>
+        </li>
+      </ul>
+      <p class="footer__html-academy html-academy">
+        HTML Academy
+        <a href="https://htmlacademy.ru">
+          <img class="html-academy__logo" alt="HTML Academy" src="img/htmlacademy.svg" width="27" height="34">
         </a>
-      </li>
-      <li class="smm-list__item">
-        <a href="#">
-        </a>
-      </li>
-      <li class="smm-list__item">
-        <a href="#">
-        </a>
-      </li>
-    </ul>
-    <p class="footer__html-academy html-academy">
-      HTML Academy
-      <a href="https://htmlacademy.ru">
-        <img class="html-academy__logo" alt="HTML Academy" src="img/htmlacademy.svg" width="27" height="34">
-      </a>
-    </p>
+      </p>
+    </section>
   </footer>
 
 </body>
